8304674: File java.c compile error with -fsanitize=address -O0